add server config

--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,9 @@
 server {
-    listen       80;
+    listen       443 ssl;
     server_name  localhost;
+
+    ssl_certificate /etc/nginx/conf.d/server.crt;
+    ssl_certificate_key /etc/nginx/conf.d/server.key;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
