add client config and dockerfile

--- a/default.conf
+++ b/default.conf
@@ -2,13 +2,20 @@ server {
     listen       443 ssl;
     server_name  localhost;
 
-    ssl_certificate /etc/nginx/conf.d/server.crt;
-    ssl_certificate_key /etc/nginx/conf.d/server.key;
+    ssl_certificate /etc/nginx/conf.d/certs/server.crt;
+    ssl_certificate_key /etc/nginx/conf.d/certs/server.key;
+
+    ssl_client_certificate /etc/nginx/conf.d/certs/ca.crt;
+    ssl_verify_depth ${VERIFY_DEPTH};
+    ssl_verify_client on;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        if ($ssl_client_s_dn != "${ALLOWED_CLIENT_S_DN}") {
+            return 403;
+        }
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
